fixed width of the create attendee box, so it doesn't jump from auto

--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -32,6 +32,20 @@
 /*  */
 /*  */
 
+#Attendee-modal-content {
+	position: absolute;
+	background-color: white;
+	size: Large;
+	border: 1px solid black;
+	border-radius: 5px;
+	height: auto;
+	width: 1000px;
+	padding: 10px;
+}
+
+/*  */
+/*  */
+
 #Logo-modal {
 	position: absolute;
 	top: 0;
